--- a/static/css/global_style.css
+++ b/static/css/global_style.css
@@ -1,3 +1,8 @@
 .navbar-custom-shadow {
   box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
 }
+
+/* Para el menu de cierre de sesion y perfil espacio */
+.navbar-nav {
+  margin-right: 40px;
+} 
