--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- BEGIN: Estilos personalizados -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/global_style.css' %}"/>
+    <!-- END: Estilos personalizados -->
+    
+    <!-- BEGIN: Estilos personalizados de las aplicaciones -->
+    {% block extra_css %}
+    {% endblock %}
+    <!-- END: Estilos personalizados de las aplicaciones -->
   </head>
   <body>
     <!-- BEGIN: navbar -->
@@ -19,33 +29,53 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
+            
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+
+          <div class="d-flex">
+
+            <div class="mx-5">
+              <ul class="navbar-nav">
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle text-capitalize" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{ request.user.username }}
+                  </a>
+                  <ul class="dropdown-menu">
+
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li>
+                      <form action="{% url 'logout' %}" method="post" class="d-flex" role="search">
+                        {% csrf_token %}
+                        <button type="submit" class="dropdown-item" >Cerrar Sesión</button>
+                      </form>
+                    </li>
+                  </ul>
+
+                </li>
+
+
+   
+              </ul>
+            </div>
+
+          
+
+           
+    
+          
+        
+          </div>
+
         </div>
       </div>
     </nav>
     <!-- END: navbar-->
     <div class="container mt-4">
+      <h3 class="text-capitalize mb-5"> Hola, {{ request.user.username }} Bienvenido</h3>
       {% block content %}
       {% endblock %}
     </div>
