cambio en el nombre de usuario en el index

--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -73,7 +73,7 @@
     </nav>
     <!-- END: navbar-->
     <div class="container mt-4">
-      <h3 class="text-capitalize mb-5"> Hola, {{ request.user.first_name }} Bienvenido</h3>
+      {% comment %} <h3 class="text-capitalize mb-5"> Hola, {{ request.user.first_name }} Bienvenido</h3> {% endcomment %}
       {% block content %}
       {% endblock %}
     </div>
