--- a/productos/templates/index.html
+++ b/productos/templates/index.html
@@ -11,6 +11,7 @@
       <th scope="col">Precio</th>
       <th scope="col">Stock</th>
       <th scope="col">Categoria</th>
+      <th scope="col">Acciones</th>
     </tr>
   </thead>
   <tbody>
@@ -27,6 +28,22 @@
       <td>{{ producto.precio}}</td>
       <td>{{ producto.stock}}</td>
       <td>{{ producto.categoria}}</td>
+      <td>
+        <!-- begin: editar -->
+          <a href="#" class="btn btn-success">
+            <i class="fa fa-edit"></i>
+          </a>
+        <!-- end: editar -->
+
+        <!-- begin: delete-->
+        <form style="display: inline-block;">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-danger">
+            <i class="fa fa-trash"></i>
+          </button>
+        </form>
+        <!-- end: delete-->
+      </td>
     </tr>
 
     {% endfor %}
