--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -4,17 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Control de Inventarios de Productos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- BEGIN: Estilos personalizados -->
+    <!-- BEGIN: Estilos Css de Boostrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- END: Estilos Css de Boostrap-->
+
+    <!-- BEGIN: FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- END: FONT AWESOME-->
+
+    <!-- BEGIN: Estilos personalizados Globales -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/global_style.css' %}"/>
-    <!-- END: Estilos personalizados -->
+    <!-- END: Estilos personalizados Globales -->
     
     <!-- BEGIN: Estilos personalizados de las aplicaciones -->
     {% block extra_css %}
     {% endblock %}
     <!-- END: Estilos personalizados de las aplicaciones -->
+    
   </head>
   <body>
     <!-- BEGIN: navbar -->
@@ -52,22 +60,10 @@
                       </form>
                     </li>
                   </ul>
-
                 </li>
-
-
-   
               </ul>
             </div>
-
-          
-
-           
-    
-          
-        
-          </div>
-
+       </div>
         </div>
       </div>
     </nav>
@@ -77,6 +73,12 @@
       {% block content %}
       {% endblock %}
     </div>
+    <!-- Begin: JavaScript de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- End: JavaScript de Bootstrap -->
+    <!-- Begin SweetAlert 2-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- End SweetAlert 2-->
+
   </body>
 </html>
