--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -22,7 +22,7 @@
     {% block extra_css %}
     {% endblock %}
     <!-- END: Estilos personalizados de las aplicaciones -->
-    
+
   </head>
   <body>
     <!-- BEGIN: navbar -->
@@ -79,6 +79,31 @@
     <!-- Begin SweetAlert 2-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- End SweetAlert 2-->
+
+    <script>
+      const deleteForms = document.querySelectorAll('form[id^="deleteForm-"]');
+      
+      deleteForms.forEach(function(form) {
+        form.addEventListener('submit', function(event) {
+          event.preventDefault();
+          const formId = this.id;
+          Swal.fire({
+            title: '¿Estás seguro que deseas eliminar el producto?',
+            text: "!No podrás revertir esto!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Si, eliminar!'
+          }).then((result) => {
+            if(result.isConfirmed) {
+              // document.querySelector(`#${formId}`).submit();
+              document.getElementById(formId).submit();
+            }
+          });
+        });
+      });
+    </script>
 
   </body>
 </html>
