--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -26,44 +26,39 @@
   </head>
   <body>
     <!-- BEGIN: navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-custom-shadow">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="{% url 'producto:index' %}">EcommerceDjango</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'producto:index' %}">Home</a>
             </li>
-            
+            <!-- Puedes añadir más elementos aquí si lo necesitas -->
           </ul>
-
-          <div class="d-flex">
-
-            <div class="mx-5">
-              <ul class="navbar-nav">
-
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle text-capitalize" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    {{ request.user.username }}
-                  </a>
-                  <ul class="dropdown-menu">
-
-                    <li><a class="dropdown-item" href="{% url 'profile' %}">Perfil</a></li>
-               
-                    <li>
-                      <form action="{% url 'logout' %}" method="post" class="d-flex" role="search">
-                        {% csrf_token %}
-                        <button type="submit" class="dropdown-item" >Cerrar Sesión</button>
-                      </form>
-                    </li>
-                  </ul>
+          <!-- Nombre del usuario y Botón de Cerrar Sesión -->
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {% if request.user.profile.image %}
+                  <img src="{{ request.user.profile.image.url }}" alt="Perfil" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
+                {% endif %}
+                {{ request.user.username }}
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="{% url 'profile' %}">Perfil</a></li>
+                <li>
+                  <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="dropdown-item">Cerrar Sesión</button>
+                  </form>
                 </li>
               </ul>
-            </div>
-       </div>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
